adding all uncommited files

--- a/blog/post2/index.mdx
+++ b/blog/post2/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Another Post"
+title: "Another Post 2"
 date: "2021-07-24"
 desc: "A brief blog to test out site functionality"
 hero_image: "./maxwell-nelson-taiuG8CPKAQ-unsplash.jpg"
