add line to post2 blog to test site functionality

--- a/blog/post2/index.mdx
+++ b/blog/post2/index.mdx
@@ -7,4 +7,7 @@ hero_image_alt: "Making the apps used by millions everyday, in coffee shops, and
 hero_image_credit_text: "Maxwell Nelson"
 hero_image_credit_link: "https://unsplash.com/photos/taiuG8CPKAQ"
 ---
+
 Here's another post! It's even better than the first one!
+
+This post is here and will have the details added about how the autonomous wheelchair project is going!
